<resources>
    <string name="app_name">Slapdesh</string>D
    <string name="logo_name">Get A Way</string>D
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered by Saydul Akbar Murad</string>


    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <string name="first_slide_desc">You can search any place by nearby or with-in the specific city. We will display specific or all related shops to match your search</string>
    <string name="second_slide_desc">We provide almost all number of all department and shops registered with us.You can perform booking as well</string>
    <string name="third_slide_desc">If you have shop or something and want to be a part of our growing industry than add your place by following simple step</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the packet in your pocket than you don\'t have to worry about anything</string>


    <string name="skip_button">Skip</string>
    <string name="next_button">Next</string>
    <string name="let_get_start">Lets get Start</string>

    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurant</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

    <string name="featured_loactions">All Featured Location</string>
    <string name="featured_locations_description">All the location that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>


</resources>
